# discord-customrpc-manager

./: .gitignore  README.md  main.py  pyproject.toml
customrpc/: __init__.py  main.py
customrpc/cli/: cli_controller.py  cli_parser.py
customrpc/core/: config_manager.py  profile_manager.py  rpc_manager.py  startup_manager.py
customrpc/dev_scripts/: dev_kill_all.py  dev_kill_all.sh
customrpc/gui/: log_viewer.py  main_window.py  profile_dialog.py  rpc_form.py  settings_dialog.py
customrpc/resources/themes/: dark.qss  light.qss
customrpc/tray/: __init__.py  tray_manager.py
customrpc/utils/: __init__.py  assets.py  ipc.py  logger.py
customrpcmanager/: main.py
customrpcmanager/cli/: __init__.py
customrpcmanager/core/: __init__.py
customrpcmanager/dev_scripts/: dev_kill_all.py  simple-presence-example.py
customrpcmanager/gui/: __init__.py  icon.py  main_window.py  rpc_form.py  settings_dialog.py
customrpcmanager/resources/: example_profile.json
customrpcmanager/tray/: tray_manager.py
customrpcmanager/utils/: assets.py  validators.py
