[project]
name = "customrpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypresence>=4.6.1",
    "pyqt6>=6.10.2",
]

[project.scripts]
customrpc = "customrpc.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "psutil>=7.2.2",
]
