[project]
name = "customrpcmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypresence>=4.6.1",
    "pyqt6>=6.10.2",
    "pyqtdarktheme>=2.1.0",
    "qtawesome>=1.4.1",
]

[project.scripts]
customrpcmanager = "customrpcmanager.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "psutil>=7.2.2",
]
